# simple-shapes-dataset

./: .editorconfig  .gitignore  .pre-commit-config.yaml  :w  FOL_CAPTION_DOCUMENTATION.md  README.md  README_xzyu.md  pyproject.toml  test_dataset_loader.py  test_fol_captions.py
.github/: dependabot.yml
.github/workflows/: tests.yml
sample_dataset/: latent_mean.npy  latent_std.npy  test_caption_choices.npy  test_captions.npy  test_labels.npy  test_latent.npy  test_odd_one_out_labels.npy  test_unpaired.npy  train_caption_choices.npy  train_captions.npy  train_labels.npy  train_latent.npy  train_odd_one_out_labels.npy  train_unpaired.npy  val_caption_choices.npy  val_captions.npy  val_labels.npy  val_latent.npy  val_odd_one_out_labels.npy  val_unpaired.npy
sample_dataset/domain_splits/: val_attr:1.0_attr,v:0.5_v:1.0_seed:0_domain_split.npy
sample_dataset/domain_splits_v2/: train_attr:1.0_attr,v:0.5_v:1.0_seed:0_ms:4_domain_split.npy  train_t:1.0_t,v:0.5_v:1.0_seed:0_ms:4_domain_split.npy  val_t:1.0_t,v:0.5_v:1.0_seed:0_ms:2_domain_split.npy
simple_shapes_dataset/: __init__.py  data_module.py  dataset.py  domain.py  domain_alignment.py  pre_process.py  version.py
simple_shapes_dataset/cli/: __init__.py  alignments.py  create_dataset.py  create_multi_shapes_dataset.py  download.py  graph.py  migration.py  odd_one_out.py  ood_splits.py  utils.py  utils_multi_shapes.py
simple_shapes_dataset/cli/multi_shapes/: __init__.py  collision.py  counting_qa_dataset.py  dataset.py  dataset_torch.py  io.py  multishape_loader.py  rendering.py  utils.py
simple_shapes_dataset/dataset/: __init__.py  data_module.py  domain.py  domain_alignment.py  pre_process.py
simple_shapes_dataset/dataset/downstream/odd_one_out/: data_module.py  dataset.py
simple_shapes_dataset/downstream/odd_one_out/: data_module.py
simple_shapes_dataset/text/: __init__.py  composer.py  composer_multi.py  composer_qa.py  language_templates.py  size_config.py  utils.py  writers.py
tests/: test_cli.py  test_dataset.py  test_domain.py  test_graph.py  test_odd_one_out.py  test_preprocess.py  test_utils.py  utils.py
