[project]
name = "simple-shapes-dataset"
version = "1.1.0"
description = "The Simple Shapes Dataset used in the Global Workspace Paper"
authors = [
    { name = "Benjamin Devillers", email = "bdvllrs@gmail.com" },
]
maintainers = [
    { name = "Benjamin Devillers", email = "bdvllrs@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "matplotlib (>=3.7.0,<4.0.0)",
    "click (>=8.1.3,<9.0.0)",
    "tqdm (>=4.66.3,<4.67.0)",
    "transformers (>=4.30.2,<5.0.0)",
    "opencv-python (>=4.7.0.72,<5.0.0.0)",
    "attributes-to-language @ git+https://github.com/ruflab/attributes-to-language.git@v0.4.0",
    "pillow (>=10.3.0,<11.0.0)",
    "numpy (>=1.26,<2.0)",
    "torch (>=2.0.1,<2.6.0)",
    "lightning (>=2.1.0,<3.0.0)",
    "torchvision (>=0.15.2,<0.21)",
]

[project.scripts]
shapesd = "simple_shapes_dataset.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "1.10.0"
ruff = "^0.6.0"
pytest = "^7.3.2"
pre-commit = "^3.6.2"
types-pyyaml = "^6.0.12.20240917"
types-protobuf = "^5.28.0.20240924"
types-redis = "^4.6.0.20241004"
types-tabulate = "^0.9.0.20240106"


[tool.ruff]
target-version = "py311"
extend-exclude = [
    "__pycache__",
    ".mypy_cache",
    ".github",
    "data",
]


[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
namespace_packages = true
ignore_missing_imports = true
install_types = true
check_untyped_defs = true
